--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.10.0",
+    "hls.js": "^1.6.5",
     "lenis": "^1.3.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
